--- a/src/app/dialog-add-task/dialog-add-task.component.html
+++ b/src/app/dialog-add-task/dialog-add-task.component.html
@@ -1,42 +1,79 @@
 <div class="add-task-container">
-    <h2>Add task</h2>
-    <mat-form-field appearance="fill">
-        <mat-label>Title</mat-label>
-        <input matInput>
-    </mat-form-field>
+    <button mat-icon-button class="close-btn" (click)="dialogRef.close()">
+        <mat-icon>close</mat-icon>
+    </button>
 
-    <mat-form-field appearance="fill">
-        <mat-label>Description</mat-label>
-        <textarea matInput></textarea>
-    </mat-form-field>
+    <div class="task-h">
+        <h1>Add task</h1>
+    </div>
 
-    <mat-form-field appearance="fill">
-        <mat-label>Category</mat-label>
-        <mat-select>
-            <mat-option value="frontend">Frontend</mat-option>
-            <mat-option value="backend">Backend</mat-option>
-            <mat-option value="design">Design</mat-option>
-            <mat-option value="marketing">Marketing</mat-option>
-            <mat-option value="backoffice">Backoffice</mat-option>
-            <mat-option value="other">Other</mat-option>
-        </mat-select>
-    </mat-form-field>
+    <div class="task-box">
+        <div class="left-box">
+            <mat-form-field appearance="outline">
+                <mat-label>Title</mat-label>
+                <input matInput>
+            </mat-form-field>
 
-    <mat-form-field appearance="fill">
-        <mat-label>Assigned to</mat-label>
-        <mat-select>
-            <mat-option value="person">Person</mat-option>
-        </mat-select>
-    </mat-form-field>
+            <mat-form-field appearance="outline">
+                <mat-label>Description</mat-label>
+                <textarea matInput></textarea>
+            </mat-form-field>
 
-    <div class="priotity-section">
-        <mat-label>Priority</mat-label>
-        <mat-radio-group class="example-radio-group"
-        [(ngModel)]="choosenCategory">
-        <mat-radio-button class="example-radio-button" *ngFor="let button of categoryBtn" value="{{ button.name }}">
-            {{ button.name[0].toUpperCase() }}{{ button.name.slice(1).toLowerCase() }}
-          <mat-icon class="{{ button.name }}-btn">{{ button.icon }}</mat-icon>
-        </mat-radio-button>
-      </mat-radio-group>
+            <mat-form-field appearance="outline">
+                <mat-label>Category</mat-label>
+                <mat-select>
+                    <mat-option value="frontend">Frontend</mat-option>
+                    <mat-option value="backend">Backend</mat-option>
+                    <mat-option value="design">Design</mat-option>
+                    <mat-option value="marketing">Marketing</mat-option>
+                    <mat-option value="backoffice">Backoffice</mat-option>
+                    <mat-option value="other">Other</mat-option>
+                </mat-select>
+            </mat-form-field>
+        </div>
+
+        <div class="right-box">
+            <mat-form-field appearance="outline" class="full-width">
+                <mat-label for="startDate">Due Date</mat-label>
+                <input [min]="minDate" matInput [matDatepicker]="picker">
+                <mat-hint>MM/DD/YYYY</mat-hint>
+                <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                <mat-datepicker #picker></mat-datepicker>
+            </mat-form-field>
+
+            <div class="priotity-section">
+                <mat-form-field appearance="outline">
+                    <label *ngIf="!clickPriority">Priority</label>
+                    <mat-label *ngIf="clickPriority">Priority</mat-label>
+                    <input [(ngModel)]="choosenPriority" matInput class="d-none">
+                    <mat-radio-group class="example-radio-group" [(ngModel)]="choosenPriority">
+                        <mat-radio-button class="example-radio-button" *ngFor="let button of priorityBtn"
+                            value="{{ button.name }}" (click)="clickPriority = true">
+                            {{ button.name[0].toUpperCase() }}{{ button.name.slice(1).toLowerCase() }}
+                            <mat-icon class="{{ button.name }}-btn">{{ button.icon }}</mat-icon>
+                        </mat-radio-button>
+                    </mat-radio-group>
+                </mat-form-field>
+            </div>
+
+            <mat-form-field appearance="outline">
+                <mat-label>Assigned to</mat-label>
+                <mat-select>
+                    <mat-option value="person">Person</mat-option>
+                </mat-select>
+            </mat-form-field>
+        </div>
+    </div>
+
+    <div class="button-box">
+        <button mat-raised-button>
+            Clear
+            <mat-icon>close</mat-icon>
+        </button>
+
+        <button mat-raised-button>
+            Save
+            <mat-icon>done</mat-icon>
+        </button>
     </div>
 </div>
