--- a/src/app/dialog-add-task/dialog-add-task.component.html
+++ b/src/app/dialog-add-task/dialog-add-task.component.html
@@ -43,15 +43,16 @@
 
             <div class="priotity-section">
                 <mat-form-field appearance="outline">
-                    <label *ngIf="!clickPriority">Priority</label>
                     <mat-label *ngIf="clickPriority">Priority</mat-label>
                     <input [(ngModel)]="choosenPriority" matInput class="d-none">
                     <mat-radio-group class="example-radio-group" [(ngModel)]="choosenPriority">
-                        <mat-radio-button class="example-radio-button" *ngFor="let button of priorityBtn"
-                            value="{{ button.name }}" (click)="clickPriority = true">
-                            {{ button.name[0].toUpperCase() }}{{ button.name.slice(1).toLowerCase() }}
-                            <mat-icon class="{{ button.name }}-btn">{{ button.icon }}</mat-icon>
-                        </mat-radio-button>
+                        <button mat-raised-button *ngFor="let button of priorityBtn">
+                            <mat-radio-button class="example-radio-button"
+                                value="{{ button.name }}" (click)="clickPriority = true">
+                                {{ button.name[0].toUpperCase() }}{{ button.name.slice(1).toLowerCase() }}
+                                <mat-icon class="{{ button.name }}-btn">{{ button.icon }}</mat-icon>
+                            </mat-radio-button>
+                        </button>
                     </mat-radio-group>
                 </mat-form-field>
             </div>
