--- a/src/app/dialog-add-task/dialog-add-task.component.scss
+++ b/src/app/dialog-add-task/dialog-add-task.component.scss
@@ -1,3 +1,7 @@
+.mat-dialog-container {
+    border-radius: 24px;
+}
+
 .add-task-container {
     display: flex;
     flex-direction: column;
@@ -6,8 +10,8 @@
 
 .close-btn {
     position: absolute;
-    right: 0;
-    top: 0;
+    right: -16px;
+    top: -20px;
     color: var(--header);
 }
 
@@ -38,6 +42,8 @@
 
     textarea {
         height: 70px;
+        min-height: 70px;
+        max-height: 250px;
     }
 }
 
@@ -56,7 +62,7 @@
     mat-radio-group {
         display: flex;
         justify-content: space-evenly;
-        margin-top: 24px;
+        // margin-top: 24px;
     }
 
     .mat-radio-button {
@@ -114,6 +120,10 @@
     display: flex !important;
 }
 
+.mat-form-field-appearance-outline .mat-form-field-outline-thick {
+    color: var(--header) !important;
+  }
+
 .button-box {
     display: flex;
     justify-content: flex-end;
@@ -125,11 +135,19 @@
             background: var(--bg-light);
             color: white;
             margin-right: 24px;
+
+            &:hover {
+                background: var(--bg-dark);
+            }
         }
 
         &:last-child {
             background: var(--header);
             color: white;
+
+            &:hover {
+                background: var(--bg-dark);
+            }
         }
     }
 }
