--- a/src/app/dialog-add-task/dialog-add-task.component.html
+++ b/src/app/dialog-add-task/dialog-add-task.component.html
@@ -12,6 +12,8 @@
             <mat-form-field appearance="outline">
                 <mat-label>Title</mat-label>
                 <input matInput>
+                <!-- <mat-icon style="color: red">check_circle</mat-icon>
+                <mat-icon style="color: green">check_circle</mat-icon> -->
             </mat-form-field>
 
             <mat-form-field appearance="outline">
