change elements style to neomorphism

--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -6,8 +6,8 @@
         </div>
 
         <div>
-            <span>
-                <input type="text" placeholder="Find task">
+            <span class="search-input">
+                <input type="text" placeholder="Search for...">
                 <mat-icon>search</mat-icon>
             </span>
             <button mat-raised-button (click)="openDialogAddTask()">
