--- a/src/app/dialog-add-task/dialog-add-task.component.html
+++ b/src/app/dialog-add-task/dialog-add-task.component.html
@@ -9,17 +9,25 @@
 
     <div class="task-box">
         <div class="left-box">
-            <mat-form-field appearance="outline">
+            <div class="input-box">
+                <input class="input-shadow" type="text" placeholder="Title">
+            </div>
+
+            <div class="input-box">
+                <textarea class="input-shadow" type="text" placeholder="Description"></textarea>
+            </div>
+            
+            <!-- <mat-form-field appearance="outline">
                 <mat-label>Title</mat-label>
                 <input matInput>
-                <!-- <mat-icon style="color: red">check_circle</mat-icon>
-                <mat-icon style="color: green">check_circle</mat-icon> -->
+                <mat-icon style="color: red">check_circle</mat-icon>
+                <mat-icon style="color: green">check_circle</mat-icon>
             </mat-form-field>
 
             <mat-form-field appearance="outline">
                 <mat-label>Description</mat-label>
                 <textarea matInput></textarea>
-            </mat-form-field>
+            </mat-form-field> -->
 
             <mat-form-field appearance="outline">
                 <mat-label>Category</mat-label>
