--- a/src/app/dialog-add-task/dialog-add-task.component.html
+++ b/src/app/dialog-add-task/dialog-add-task.component.html
@@ -9,14 +9,22 @@
 
     <div class="task-box">
         <div class="left-box">
-            <div class="input-box">
-                <input class="input-shadow" type="text" placeholder="Title">
-            </div>
+            <mat-form-field class="input-shadow input-box height-36">
+                <input matInput type="text" placeholder="Title">
+            </mat-form-field>
 
-            <div class="input-box">
+            <mat-form-field class="input-shadow input-box">
+                <textarea class="textarea-input" matInput type="text" placeholder="Description"></textarea>
+            </mat-form-field>
+
+            <!-- <div class="input-box">
+                <input class="input-shadow" type="text" placeholder="Title">
+            </div> -->
+
+            <!-- <div class="input-box">
                 <textarea class="input-shadow" type="text" placeholder="Description"></textarea>
-            </div>
-            
+            </div> -->
+
             <!-- <mat-form-field appearance="outline">
                 <mat-label>Title</mat-label>
                 <input matInput>
@@ -29,7 +37,7 @@
                 <textarea matInput></textarea>
             </mat-form-field> -->
 
-            <mat-form-field appearance="outline">
+            <!-- <mat-form-field appearance="outline">
                 <mat-label>Category</mat-label>
                 <mat-select>
                     <mat-option value="frontend">Frontend</mat-option>
@@ -39,52 +47,66 @@
                     <mat-option value="backoffice">Backoffice</mat-option>
                     <mat-option value="other">Other</mat-option>
                 </mat-select>
-            </mat-form-field>
+            </mat-form-field> -->
+
+            <div class="input-box">
+                <select class="description-option input-shadow">
+                    <option selected>Choose category...</option>
+                    <option value="{{ opt }}" *ngFor="let opt of optionList">{{ opt }}</option>
+                </select>
+            </div>
         </div>
 
         <div class="right-box">
-            <mat-form-field appearance="outline" class="full-width">
+            <mat-form-field class="input-shadow input-box height-36">
                 <mat-label for="startDate">Due Date</mat-label>
-                <input [min]="minDate" matInput [matDatepicker]="picker">
-                <mat-hint>MM/DD/YYYY</mat-hint>
+                <input [min]="minDate" matInput [matDatepicker]="picker" placeholder="mm/dd/yyyy">
+                <!-- <mat-hint>MM/DD/YYYY</mat-hint> -->
                 <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                 <mat-datepicker #picker></mat-datepicker>
             </mat-form-field>
 
             <div class="priotity-section">
-                <mat-form-field appearance="outline">
+                <mat-form-field class="input-shadow input-box hover-prio">
                     <mat-label *ngIf="clickPriority">Priority</mat-label>
                     <input [(ngModel)]="choosenPriority" matInput class="d-none">
                     <mat-radio-group class="example-radio-group" [(ngModel)]="choosenPriority">
-                        <button mat-raised-button *ngFor="let button of priorityBtn">
-                            <mat-radio-button class="example-radio-button"
-                                value="{{ button.name }}" (click)="clickPriority = true">
+                        <div *ngFor="let button of priorityBtn" class="btn-shadow">
+                            <mat-radio-button class="example-radio-button" value="{{ button.name }}"
+                                (click)="clickPriority = true">
                                 {{ button.name[0].toUpperCase() }}{{ button.name.slice(1).toLowerCase() }}
                                 <mat-icon class="{{ button.name }}-btn">{{ button.icon }}</mat-icon>
                             </mat-radio-button>
-                        </button>
+                        </div>
                     </mat-radio-group>
                 </mat-form-field>
             </div>
 
-            <mat-form-field appearance="outline">
+            <div class="input-box">
+                <select class="description-option input-shadow">
+                    <option selected>Assigned to...</option>
+                    <option value="person">Person</option>
+                </select>
+            </div>
+
+            <!-- <mat-form-field appearance="outline">
                 <mat-label>Assigned to</mat-label>
                 <mat-select>
                     <mat-option value="person">Person</mat-option>
                 </mat-select>
-            </mat-form-field>
+            </mat-form-field> -->
         </div>
     </div>
 
     <div class="button-box">
-        <button mat-raised-button>
+        <div>
             Clear
             <mat-icon>close</mat-icon>
-        </button>
+        </div>
 
-        <button mat-raised-button>
+        <div>
             Save
             <mat-icon>done</mat-icon>
-        </button>
+        </div>
     </div>
 </div>
