--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -130,9 +130,10 @@
     // box-shadow: 0px 0px 6px 2px #f1e0fe;
     box-shadow: inset 2px 2px 0px var(--bg-light), 
                 inset -1px -1px 11px #ffffff;
-    transition: all 0.4s cubic-bezier(1, 0.04, 0.66, 1.23);
+    transition: all 253ms cubic-bezier(1, 0.04, 0.66, 1.23);
     animation: pressed-btn 0.4s cubic-bezier(1, 0.04, 0.66, 1.23);
     color: var(--header) !important;
+    border-radius: 14px;
 }
 
 @keyframes pressed-btn {
