--- a/src/app/dialog-add-task/dialog-add-task.component.html
+++ b/src/app/dialog-add-task/dialog-add-task.component.html
@@ -10,11 +10,11 @@
     <div class="task-box">
         <div class="left-box">
             <mat-form-field class="input-shadow input-box height-36">
-                <input matInput type="text" placeholder="Title">
+                <input matInput type="text" placeholder="Title" [(ngModel)]="task.title">
             </mat-form-field>
 
             <mat-form-field class="input-shadow input-box">
-                <textarea class="textarea-input" matInput type="text" placeholder="Description"></textarea>
+                <textarea class="textarea-input" matInput type="text" placeholder="Description" [(ngModel)]="task.description"></textarea>
             </mat-form-field>
 
             <!-- <div class="input-box">
@@ -50,9 +50,10 @@
             </mat-form-field> -->
 
             <div class="input-box">
-                <select class="description-option input-shadow">
-                    <option selected>Choose category...</option>
-                    <option value="{{ opt }}" *ngFor="let opt of optionList">{{ opt }}</option>
+                <select class="description-option input-shadow" [(ngModel)]="selectedCategory" (change)="selectOption()">
+                    <!-- <option selected>Choose category...</option> -->
+                    <option [ngValue]="undefined" [disabled]="true">Choose category...</option>
+                    <option value="{{ category }}" *ngFor="let category of categoryList">{{ category }}</option>
                 </select>
             </div>
         </div>
@@ -60,7 +61,7 @@
         <div class="right-box">
             <mat-form-field class="input-shadow input-box height-36">
                 <mat-label for="startDate">Due Date</mat-label>
-                <input [min]="minDate" matInput [matDatepicker]="picker" placeholder="mm/dd/yyyy">
+                <input [min]="minDate" matInput [matDatepicker]="picker" placeholder="mm/dd/yyyy" [(ngModel)]="dueDate">
                 <!-- <mat-hint>MM/DD/YYYY</mat-hint> -->
                 <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                 <mat-datepicker #picker></mat-datepicker>
@@ -69,8 +70,8 @@
             <div class="priotity-section">
                 <mat-form-field class="input-shadow input-box hover-prio">
                     <mat-label *ngIf="clickPriority">Priority</mat-label>
-                    <input [(ngModel)]="choosenPriority" matInput class="d-none">
-                    <mat-radio-group class="example-radio-group" [(ngModel)]="choosenPriority">
+                    <input [(ngModel)]="task.priority" matInput class="d-none">
+                    <mat-radio-group class="example-radio-group" [(ngModel)]="task.priority">
                         <div *ngFor="let button of priorityBtn" class="btn-shadow">
                             <mat-radio-button class="example-radio-button" value="{{ button.name }}"
                                 (click)="clickPriority = true">
@@ -83,8 +84,8 @@
             </div>
 
             <div class="input-box">
-                <select class="description-option input-shadow">
-                    <option selected>Assigned to...</option>
+                <select class="description-option input-shadow" [(ngModel)]="task.assignedTo">
+                    <option value="" disabled selected>Assigned to...</option>
                     <option value="person">Person</option>
                 </select>
             </div>
@@ -104,7 +105,7 @@
             <mat-icon>close</mat-icon>
         </div>
 
-        <div>
+        <div (click)="saveTask('To do')">
             Save
             <mat-icon>done</mat-icon>
         </div>
