--- a/src/app/summary/summary.component.scss
+++ b/src/app/summary/summary.component.scss
@@ -6,7 +6,7 @@
     display: flex;
     align-items: center;
     width: 80vw;
-    margin-top: 5vh;
+    margin-top: 20px;
 }
 
 .summary-cards {
@@ -15,7 +15,7 @@
     justify-content: space-around;
     align-items: center;
     width: 35vw;
-    height: 60vh;
+    height: 65vh;
     margin-left: 5vw;
 
     div {
