--- a/src/app/dialog-add-task/dialog-add-task.component.html
+++ b/src/app/dialog-add-task/dialog-add-task.component.html
@@ -105,7 +105,7 @@
             <mat-icon>close</mat-icon>
         </div>
 
-        <div (click)="saveTask('To do')">
+        <div (click)="saveTask()">
             Save
             <mat-icon>done</mat-icon>
         </div>
