--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -18,147 +18,47 @@
     </div>
 
     <div class="card-body">
-        <div class="progress-box">
+        <div class="progress-box" *ngFor="let statusName of statusList">
             <div class="progress-header">
-                <h1>To do</h1>
-                <button mat-icon-button (click)="openDialogAddTask('To do')">
+                <h1>{{ statusName }}</h1>
+                <button mat-icon-button (click)="openDialogAddTask(statusName)">
                     <mat-icon>add_circle</mat-icon>
                 </button>
             </div>
 
             <div class="task-cards">
-                <mat-card  class="hide-icons">
-                    <span class="task-category" style="background: var(--orange)">Design</span>
+                <div *ngFor="let task of allTasks">
+                    <mat-card class="hide-icons" *ngIf="task.status === statusName">
+                        <span class="task-category" [style.background-color]="getCategoryColor(task.category)">
+                            {{ task.category }}</span>
 
-                    <div class="pin-icons">
-                        <mat-icon matTooltip="Delete task" matTooltipPosition="above" matTooltipClass="tooltip-blue">delete</mat-icon>
-                        <mat-icon matTooltip="Pin task to top" matTooltipPosition="above" matTooltipClass="tooltip-blue">push_pin</mat-icon>
-                    </div>
-
-                    <div>
-                        <span class="task-date">Date</span>
-                        <h4 class="task-name">Task Name</h4>
-                        <div>
-                            <span class="task-assigned">AÜ</span>
-                            <mat-icon style="color: #7AE229">keyboard_double_arrow_down</mat-icon>
+                        <div class="pin-icons">
+                            <mat-icon matTooltip="Delete task" matTooltipPosition="above"
+                                matTooltipClass="tooltip-blue">delete</mat-icon>
+                            <mat-icon matTooltip="Pin task to top" matTooltipPosition="above"
+                                matTooltipClass="tooltip-blue">push_pin</mat-icon>
                         </div>
-                    </div>
-                </mat-card>
 
-                <div class="add-card" (click)="openDialogAddTask('To do')">
+                        <div>
+                            <span class="task-date">{{ task.dueDate | date: "dd/MM/yyyy" }}</span>
+                            <h4 class="task-name">{{ task.title }}</h4>
+                            <div>
+                                <span class="task-assigned">
+                                    {{ task.assignedTo[0].toUpperCase() }}{{task.assignedTo[0].toUpperCase() }}</span>
+                                <mat-icon style="color: #7AE229"
+                                    *ngIf="task.priority==='low'">keyboard_double_arrow_down</mat-icon>
+                                <mat-icon style="color: #FF3D00"
+                                    *ngIf="task.priority==='urgent'">keyboard_double_arrow_up</mat-icon>
+                                <mat-icon style="color: #FFA800" 
+                                    *ngIf="task.priority==='medium'">clear_all</mat-icon>
+                            </div>
+                        </div>
+                    </mat-card>
+                </div>
+
+                <div class="add-card" (click)="openDialogAddTask(statusName)">
                     <span>Create new task</span>
                     <button mat-icon-button>
-                        <mat-icon>add_circle</mat-icon>
-                    </button>
-                </div>
-            </div>
-        </div>
-
-        <div class="progress-box">
-            <div class="progress-header">
-                <h1>In progress</h1>
-                <button mat-icon-button (click)="openDialogAddTask('In progress')">
-                    <mat-icon>add_circle</mat-icon>
-                </button>
-            </div>
-
-            <div class="task-cards">
-                <mat-card class="hide-icons">
-                    <span class="task-category" style="background: var(--pink)">Sales</span>
-
-                    <div class="pin-icons">
-                        <mat-icon matTooltip="Delete task" matTooltipPosition="above" matTooltipClass="tooltip-blue">delete</mat-icon>
-                        <mat-icon matTooltip="Pin task to top" matTooltipPosition="above" matTooltipClass="tooltip-blue">push_pin</mat-icon>
-                    </div>
-
-                    <div>
-                        <span class="task-date">Date</span>
-                        <h4 class="task-name">Task Name</h4>
-
-                        <div>
-                            <span class="task-assigned">AÜ</span>
-                            <mat-icon style="color: #FF3D00">keyboard_double_arrow_up</mat-icon>
-                        </div>
-                    </div>
-                </mat-card>
-
-                <div class="add-card" (click)="openDialogAddTask('In progress')">
-                    <span>Create new task</span>
-                    <button mat-icon-button (click)="openDialogAddTask('In progress')">
-                        <mat-icon>add_circle</mat-icon>
-                    </button>
-                </div>
-            </div>
-        </div>
-
-        <div class="progress-box">
-            <div class="progress-header">
-                <h1>Awaiting Feedback</h1>
-                <button mat-icon-button (click)="openDialogAddTask('Awaiting Feedback')">
-                    <mat-icon>add_circle</mat-icon>
-                </button>
-            </div>
-
-            <div class="task-cards">
-                <mat-card  class="hide-icons">
-                    <span class="task-category" style="background: var(--green)">Backoffice</span>
-
-                    <div class="pin-icons">
-                        <mat-icon matTooltip="Delete task" matTooltipPosition="above" matTooltipClass="tooltip-blue">delete</mat-icon>
-                        <mat-icon matTooltip="Pin task to top" matTooltipPosition="above" matTooltipClass="tooltip-blue">push_pin</mat-icon>
-                    </div>
-
-                    <div>
-                        <span class="task-date">Date</span>
-                        <h4 class="task-name">Task Name</h4>
-
-                        <div>
-                            <span class="task-assigned">AÜ</span>
-                            <mat-icon style="color: #FFA800">clear_all</mat-icon>
-                        </div>
-                    </div>
-                </mat-card>
-
-                <div class="add-card" (click)="openDialogAddTask('Awaiting Feedback')">
-                    <span>Create new task</span>
-                    <button mat-icon-button (click)="openDialogAddTask('Awaiting Feedback')">
-                        <mat-icon>add_circle</mat-icon>
-                    </button>
-                </div>
-            </div>
-        </div>
-
-        <div class="progress-box">
-            <div class="progress-header">
-                <h1>Done</h1>
-                <button mat-icon-button (click)="openDialogAddTask('Done')">
-                    <mat-icon>add_circle</mat-icon>
-                </button>
-            </div>
-
-            <div class="task-cards">
-                <mat-card  class="hide-icons">
-                    <span class="task-category" style="background: var(--blue)">Marketing</span>
-
-                    <div class="pin-icons">
-                        <mat-icon matTooltip="Delete task" matTooltipPosition="above" matTooltipClass="tooltip-blue">delete</mat-icon>
-                        <mat-icon matTooltip="Pin task to top" matTooltipPosition="above" matTooltipClass="tooltip-blue">push_pin</mat-icon>
-                    </div>
-
-                    <div>
-                        <span class="task-date">Date</span>
-                        <h4 class="task-name">Task Name</h4>
-
-                        <div>
-                            <span class="task-assigned">AÜ</span>
-                            <mat-icon style="color: #7AE229">keyboard_double_arrow_down</mat-icon>
-                        </div>
-                    </div>
-                </mat-card>
-
-                <div class="add-card" (click)="openDialogAddTask('Done')">
-                    <span>Create new task</span>
-                    <button mat-icon-button (click)="openDialogAddTask('Done')">
                         <mat-icon>add_circle</mat-icon>
                     </button>
                 </div>
