--- a/src/app/dialog-add-task/dialog-add-task.component.html
+++ b/src/app/dialog-add-task/dialog-add-task.component.html
@@ -4,7 +4,7 @@
     </button>
 
     <div class="task-h">
-        <h1>Add task</h1>
+        <h1>Add task to: {{ taskStatus }}</h1>
     </div>
 
     <div class="task-box">
@@ -14,44 +14,13 @@
             </mat-form-field>
 
             <mat-form-field class="input-shadow input-box">
-                <textarea class="textarea-input" matInput type="text" placeholder="Description" [(ngModel)]="task.description"></textarea>
+                <textarea class="textarea-input" matInput type="text" placeholder="Description"
+                    [(ngModel)]="task.description"></textarea>
             </mat-form-field>
-
-            <!-- <div class="input-box">
-                <input class="input-shadow" type="text" placeholder="Title">
-            </div> -->
-
-            <!-- <div class="input-box">
-                <textarea class="input-shadow" type="text" placeholder="Description"></textarea>
-            </div> -->
-
-            <!-- <mat-form-field appearance="outline">
-                <mat-label>Title</mat-label>
-                <input matInput>
-                <mat-icon style="color: red">check_circle</mat-icon>
-                <mat-icon style="color: green">check_circle</mat-icon>
-            </mat-form-field>
-
-            <mat-form-field appearance="outline">
-                <mat-label>Description</mat-label>
-                <textarea matInput></textarea>
-            </mat-form-field> -->
-
-            <!-- <mat-form-field appearance="outline">
-                <mat-label>Category</mat-label>
-                <mat-select>
-                    <mat-option value="frontend">Frontend</mat-option>
-                    <mat-option value="backend">Backend</mat-option>
-                    <mat-option value="design">Design</mat-option>
-                    <mat-option value="marketing">Marketing</mat-option>
-                    <mat-option value="backoffice">Backoffice</mat-option>
-                    <mat-option value="other">Other</mat-option>
-                </mat-select>
-            </mat-form-field> -->
 
             <div class="input-box">
-                <select class="description-option input-shadow" [(ngModel)]="selectedCategory" (change)="selectCategory()">
-                    <!-- <option selected>Choose category...</option> -->
+                <select class="description-option input-shadow" [(ngModel)]="selectedCategory"
+                    (change)="selectCategory()">
                     <option [ngValue]="undefined" [disabled]="true">Choose category...</option>
                     <option value="{{ category }}" *ngFor="let category of categoryList">{{ category }}</option>
                 </select>
@@ -62,7 +31,6 @@
             <mat-form-field class="input-shadow input-box height-36">
                 <mat-label for="startDate">Due Date</mat-label>
                 <input [min]="minDate" matInput [matDatepicker]="picker" placeholder="mm/dd/yyyy" [(ngModel)]="dueDate">
-                <!-- <mat-hint>MM/DD/YYYY</mat-hint> -->
                 <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                 <mat-datepicker #picker></mat-datepicker>
             </mat-form-field>
@@ -89,13 +57,6 @@
                     <option value="person">Person</option>
                 </select>
             </div>
-
-            <!-- <mat-form-field appearance="outline">
-                <mat-label>Assigned to</mat-label>
-                <mat-select>
-                    <mat-option value="person">Person</mat-option>
-                </mat-select>
-            </mat-form-field> -->
         </div>
     </div>
 
