--- a/src/app/board/board.component.scss
+++ b/src/app/board/board.component.scss
@@ -83,7 +83,6 @@ $innerShadow: inset -4px -4px 6px -1px rgba($lightShadow, 1),
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 12px;
     margin-left: 12px;
     width: 95%;
 
@@ -103,9 +102,8 @@ $innerShadow: inset -4px -4px 6px -1px rgba($lightShadow, 1),
 }
 
 .progress-box {
-    width: 260px;
-    height: 70vh;
-    overflow-y: auto;
+    width: 275px;
+    height: 69vh;
     padding: 8px;
     border: 3px dotted rgb(255 255 255 / 12%);
     background: rgb(255 255 255 / 12%);
@@ -116,13 +114,15 @@ $innerShadow: inset -4px -4px 6px -1px rgba($lightShadow, 1),
     display: flex;
     flex-direction: column;
     align-items: center;
+    overflow-y: auto;
+    max-height: 64vh;
 
     mat-card {
         display: flex;
-        // flex-direction: row-reverse;
         width: 200px;
         border-radius: 24px;
         margin-bottom: 12px;
+        margin-top: 12px;
         background: #f1f4fd;
         position: relative;
         height: 116px;
