--- a/src/app/summary/summary.component.html
+++ b/src/app/summary/summary.component.html
@@ -10,17 +10,17 @@
         <div class="summary-cards">
             <div class="task-overview">
                 <mat-card routerLink="/board">
-                    <span>5</span> <br>
+                    <span>{{ taskLength }}</span> <br>
                     <span>Tasks in Board</span>
                 </mat-card>
 
                 <mat-card routerLink="/board">
-                    <span>2</span> <br>
+                    <span>{{ inProgressLength }}</span> <br>
                     <span>Tasks in Progress</span>
                 </mat-card>
 
                 <mat-card routerLink="/board">
-                    <span>3</span> <br>
+                    <span>{{ awaitingFeedbackLength }}</span> <br>
                     <span>Awaiting Feedback</span>
                 </mat-card>
             </div>
@@ -32,7 +32,7 @@
                             <mat-icon>keyboard_double_arrow_up</mat-icon>
                         </div>
                         <div>
-                            <span>1</span> <br>
+                            <span>{{ urgentLength }}</span> <br>
                             <span>Urgent</span>
                         </div>
                     </div>
@@ -50,7 +50,7 @@
                         <mat-icon>file_open</mat-icon>
                     </div>
                     <div>
-                        <span>1</span> <br>
+                        <span>{{ toDoLength }}</span> <br>
                         <span>To-do</span>
                     </div>
                 </mat-card>
@@ -60,7 +60,7 @@
                         <mat-icon>check</mat-icon>
                     </div>
                     <div>
-                        <span>1</span> <br>
+                        <span>{{ doneLength }}</span> <br>
                         <span>Done</span>
                     </div>
                 </mat-card>
